WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188018
REGRESSION(
r227577
) Text on TV & Movies page doesn't wrap properly in iTunes
https://bugs.webkit.org/show_bug.cgi?id=188018
Summary
REGRESSION(r227577) Text on TV & Movies page doesn't wrap properly in iTunes
alan
Reported
2018-07-25 13:48:20 PDT
rollout
r227577
Attachments
Patch
(95.82 KB, patch)
2018-07-25 13:53 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-07-25 13:48:31 PDT
<
rdar://problem/42517520
>
alan
Comment 2
2018-07-25 13:53:41 PDT
Created
attachment 345781
[details]
Patch
WebKit Commit Bot
Comment 3
2018-07-25 15:44:55 PDT
Comment on
attachment 345781
[details]
Patch Clearing flags on attachment: 345781 Committed
r234215
: <
https://trac.webkit.org/changeset/234215
>
WebKit Commit Bot
Comment 4
2018-07-25 15:44:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug