Source/WebCore/rendering/style/StyleRareNonInheritedData.h
@@ -102,7 +102,6 @@ public:
     Length perspectiveOriginY;
 
     LineClampValue lineClamp; // An Apple extension.
-    LinesClampValue linesClamp; // An Apple extension.
     
     IntSize initialLetter;
 
